# imago

./: Cargo.toml  Gemfile  README.md  Rakefile  imago.gemspec
lib/: imago.rb
lib/imago/: ffi.rb  libimago.dylib  version.rb
spec/: imago_spec.rb  spec_helper.rb
src/: lib.rs
