[package]
name = "imago"
version = "0.1.0"
authors = ["Andrew Sims <acsims@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
img_hash = "3.1.1"
image = "0.23.14"
